--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,11 @@
 
 <head>
 	<meta charset="utf-8">
-	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="theme-color" content="#000000">
+	<meta http-equiv = "X-UA-Compatible" content = "IE=Edge,chrome=1">
+	<meta name = "renderer" content = "webkit">
+	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 	<!--
 		manifest.json provides metadata used when your web app is added to the
 		homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
